[tool.poetry]
name = "lesson10-2"
version = "0.1.0"
description = ""
authors = ["Viktor Shadrin <v.vshadrin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
